--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.2",
     "react-scripts": "4.0.3",
