--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
+    "react-router-bootstrap": "^0.26.2",
     "react-scripts": "4.0.3",
     "react-testing-library": "^8.0.1",
+    "redux": "^4.2.0",
     "sass": "^1.35.2",
     "web-vitals": "^1.1.2"
   },
