--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,6 +19,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-scripts": "4.0.3",
     "react-testing-library": "^8.0.1",
+    "reactstrap": "^9.1.3",
     "redux": "^4.2.0",
     "sass": "^1.35.2",
     "web-vitals": "^1.1.2"
